--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ function oms_full(){
 	<script type="text/javascript">
 		
 	function myFunction(){
-window.location ="https://noenadies.github.io/titanic/";
+window.location ="https://noenadies.github.io/grafima/";
 
 	}
 </script></div>
